src/scss/06_components/paragraphs/_react-search.scss
.component--react-search {
  background-color: $color-silver-light;
}

// If the event search search is just before footer it needs to function the same way as unit search.
.layout-main-wrapper > *:last-child .component--react-search:last-child .component__container {
  margin-bottom: -115px; // Enough to get the block under the footer.
  padding-bottom: 115px; // Leave enough room between the last card and footer.
}

.react-search__list-container {
  margin-bottom: $spacing-double;
}

.react-search__results-stats {
  margin-bottom: $spacing;
}

.hdbt-search--react__tabs {
  margin-bottom: $spacing-triple;
}

.hdbt-search--react__tab {
  --tab-active-border-color: var(--hdbt-color-black);
  --tab-color: var(--hdbt-color-black);
}

.hdbt-search--react__form-description {
  margin-bottom: $spacing-and-half;
}

.hdbt-search--react__text-field {
  margin-bottom: $spacing-double;
}

// Override some fieldset default styles here
.hdbt-search--react__fieldset {
  @include breakpoint($breakpoint-l) {
    display: flex;
  }

  border: none;
  margin-bottom: $spacing-double;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
}

.hdbt-search--react__legend {
  font-weight: $font-weight-medium;
  margin-bottom: $spacing;
}

// Use specific selectors here to override HDS styles
fieldset .hdbt-search--react__checkbox {
  --background-selected: var(--hdbt-color-black);
}

fieldset .hdbt-search--react__checkbox:not(:first-of-type) {
  @include breakpoint($breakpoint-l) {
    margin-left: $spacing;
    margin-top: 0;
  }

  margin-top: $spacing-double;
}

.hdbt-search--react__result-top-area {
  @include breakpoint($breakpoint-l) {
    display: flex;
    justify-content: space-between;
  }

  margin-bottom: $spacing;
}

.hdbt-search--react__results--title {
  @include breakpoint($breakpoint-l) {
    margin-bottom: 0;
  }

  align-items: center;
  display: flex;
  margin-bottom: $spacing-three-quarters;
  margin-top: 0;
}

.hdbt-search--react__results--tablist {
  .tablist-tab {
    background-color: transparent;
    border: none;
    color: $color-black-90;
    padding: $spacing;

    &:hover {
      cursor: pointer;
    }

    &[aria-selected='true'] {
      border-bottom: $spacing-quarter solid $color-black-90;
    }
  }
}

.component--hdbt-search--ploughing-schedule .component__container {
  background-color: $color-silver-light;
}

.components--upper .component--hdbt-search--ploughing-schedule .component__container {
  margin-left: $spacing;
  margin-right: $spacing;  
  padding: $spacing-and-half;

  @include breakpoint($breakpoint-m) {    
    margin-left: $spacing-double;
    margin-right: $spacing-double;
    padding: $spacing-double;  
  }

  @include breakpoint($breakpoint-l) {
    margin: 0;
  }
}

.has-sidebar .components--upper .component--hdbt-search--ploughing-schedule {
  @include breakpoint(max-width $breakpoint-l) {
    @include component-negative-side-margin;
  }
}

.component--hdbt-search--ploughing-schedule .hdbt-search--react__form-title {
  margin-top: 0;
}

.hdbt-search--ploughing-schedule__submit-button:not(:disabled) {
  margin-bottom: 0;
  margin-top: $spacing;
}

.hdbt-search--ploughing-schedule__result-card {
  border-left: 8px solid $color-gold;
  padding-left: $spacing-double;
  padding-right: $spacing-double;

  &.no-results {
    border: none;
  }
}

.hdbt-search--ploughing-schedule__result-card--title {
  margin-bottom: $spacing;
}

.layout-main-wrapper > *:last-child .component--react-search--ploughing-schedule:last-child .component__container {
  margin-bottom: 0;
  padding-bottom: $spacing-double;
}

